change component name

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "uni-carousel-react",
+  "name": "tuzebra-uni-carousel-react",
   "main": "index.js",
   "version": "0.1.0",
   "homepage": "https://github.com/kenwheeler/nuka-carousel",
